--- a/weatherApp/package.json
+++ b/weatherApp/package.json
@@ -10,9 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "babel-cli": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0"
+    "babel-preset-es2015": "^6.18.0",
+    "vue": "^2.1.8"
   },
   "babel": {
-    "presets": ["es2015"]
+    "presets": [
+      "es2015"
+    ]
   }
 }
